# openwheel-gnome

./: .gitignore  99-openwheel.rules  BUILD.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION.md  README.md
.github/workflows/: cmake-single-platform.yml
docs/: plasma-integration.md
docs/superpowers/plans/: 2026-03-20-overlay-redesign.md
openwheel-daemon/: CMakeLists.txt  dbus_methods.c  dbus_methods.h  helpers.c  hidreader.c  keymap.c  keymap.h  uinput.c  uinput.h
openwheel-gadget/: CMakeLists.txt  openwheel-gadget.desktop  openwheel-gadget.metainfo.xml
openwheel-gadget/package/: metadata.json
openwheel-gadget/package/contents/ui/: main.qml
openwheel-gadget/src/: main.cpp
openwheel-gadget/src/core/: actionexecutor.cpp  actionexecutor.h  desktopenvironment.cpp  desktopenvironment.h  dialcontroller.cpp  dialcontroller.h  rotationhandler.cpp  rotationhandler.h
openwheel-gadget/src/dbus/: dbusinterface.cpp  dbusinterface.h
openwheel-gadget/src/profiles/: applicationmatcher.cpp  applicationmatcher.h  profile.cpp  profile.h  profilemanager.cpp  profilemanager.h
openwheel-gadget/src/ui/: DemoWheelWindow.qml  OverlayWindow.qml  ui.qrc
openwheel-gadget/src/ui/settings/: ActionEditor.qml  FunctionEditor.qml  SettingsWindow.qml
profiles/: blender.json  krita.json  music.json  system-default.json  workspaces.json
systemd/: openwheel-daemon.service.in
tests/: CMakeLists.txt  smoke_brightness.cpp  smoke_profiles.cpp  smoke_settings.cpp  smoke_zoom.cpp  test_rotation.cpp
udev/: 99-openwheel.rules
